<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:clipChildren="false">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_normal"
    android:clipChildren="false">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:clipChildren="false">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingHorizontal="@dimen/padding_small">

        <!-- ViewFlipper for the EN Status -->
        <ViewFlipper
          android:id="@+id/en_status_flipper"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:visibility="gone">

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
              android:layout_width="@dimen/home_page_icon_size"
              android:layout_height="@dimen/home_page_icon_size"
              android:layout_gravity="center"
              android:importantForAccessibility="no"
              android:contentDescription="@null"
              android:onClick="launchExposureNotificationsAbout"
              app:srcCompat="@drawable/ic_en_active"
              style="?attr/borderlessButtonStyle" />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="?attr/actionBarSize"
              android:gravity="center"
              android:paddingStart="@dimen/padding_small"
              android:onClick="launchExposureNotificationsAbout"
              android:text="@string/en_active"
              android:textAppearance="?attr/textAppearanceSubtitle2" />

          </LinearLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
              android:layout_width="@dimen/home_page_icon_size"
              android:layout_height="@dimen/home_page_icon_size"
              android:layout_gravity="center"
              android:importantForAccessibility="no"
              android:contentDescription="@null"
              android:onClick="launchExposureNotificationsAbout"
              app:srcCompat="@drawable/ic_not_checking_for_exposure"
              style="?attr/borderlessButtonStyle" />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="?attr/actionBarSize"
              android:gravity="center"
              android:paddingStart="@dimen/padding_small"
              android:onClick="launchExposureNotificationsAbout"
              android:text="@string/en_inactive"
              android:textAppearance="?attr/textAppearanceSubtitle2" />

          </LinearLayout>

        </ViewFlipper>

        <ImageButton
          android:id="@+id/settings_button"
          android:layout_width="@dimen/touch_area_min_size"
          android:layout_height="?attr/actionBarSize"
          android:layout_alignParentEnd="true"
          android:paddingEnd="0dp"
          android:contentDescription="@string/home_tab_settings_text"
          app:srcCompat="@drawable/ic_settings"
          style="?attr/borderlessButtonStyle" />

      </RelativeLayout>

      <ViewFlipper
        android:id="@+id/main_ui_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:measureAllChildren="false">

        <!-- 1. App is active and checking. -->
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:clipChildren="false">

          <!-- "No exposure" icon with pulse animations -->
          <include
            layout="@layout/no_exposure_pulses"
            android:id="@+id/no_exposure_checkmark" />

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:gravity="@integer/header_gravity"
            android:text="@string/no_recent_exposure_title"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:gravity="@integer/header_gravity"
            android:text="@string/app_active_and_checking_info"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorControlNormal"/>

          <!-- "No recent exposure" card -->
          <include
            layout="@layout/card_no_recent_exposure"
            android:id="@+id/no_recent_exposure_layout" />

        </LinearLayout>

        <!-- 2. Exposure Notifications is off. -->
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/home_screen_header_margin_top"
          android:layout_marginBottom="@dimen/padding_small"
          android:orientation="vertical">

          <ImageView
            android:layout_width="@dimen/home_page_icon_size"
            android:layout_height="@dimen/home_page_icon_size"
            android:layout_gravity="@integer/header_gravity"
            android:layout_marginStart="@dimen/home_screen_en_off_header_image_margin_start"
            android:importantForAccessibility="no"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_not_checking_for_exposure" />

          <!-- Insert edge-case handling via sub-fragment-->
          <FrameLayout
            android:id="@+id/single_page_edge_case_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/home_screen_en_off_header_horizontal_padding"
            android:orientation="vertical"
            android:animateLayoutChanges="false"
            android:visibility="gone" />

        </LinearLayout>

        <!-- 3. Possible exposure reported. -->
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/home_screen_header_margin_top"
          android:orientation="vertical">

          <ImageView
            android:layout_width="@dimen/home_page_icon_size"
            android:layout_height="@dimen/home_page_icon_size"
            android:layout_gravity="@integer/header_gravity"
            android:layout_marginStart="@dimen/padding_small"
            android:importantForAccessibility="no"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_possible_exposure_alert" />

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="@integer/header_gravity"
            android:layout_marginVertical="@dimen/padding_small"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/possible_exposure_title"
            android:textAppearance="?attr/textAppearanceHeadline5" />

          <!-- "Possible exposure" card -->
          <include
            layout="@layout/card_possible_exposure"
            android:id="@+id/possible_exposure_layout" />

        </LinearLayout>

        <!-- 4. Share your test results. -->
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/home_screen_header_margin_top"
          android:orientation="vertical">

          <ImageView
            android:layout_width="@dimen/home_page_icon_size"
            android:layout_height="@dimen/home_page_icon_size"
            android:layout_gravity="@integer/header_gravity"
            android:layout_marginStart="@dimen/padding_small"
            android:importantForAccessibility="no"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_share_test_result_home_icon" />

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="@integer/header_gravity"
            android:layout_marginVertical="@dimen/padding_small"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/share_test_result_home_screen_title"
            android:textAppearance="?attr/textAppearanceHeadline5" />

          <!-- "Share positive test result" card -->
          <include
            layout="@layout/card_share_test_result"
            android:id="@+id/share_test_result_card" />

        </LinearLayout>

      </ViewFlipper>

      <TextView
        android:id="@+id/help_protect_community_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginVertical="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_normal"
        android:text="@string/share_begin_title"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:visibility="gone" />

      <!-- Secondary "Share your test result" card -->
      <LinearLayout
        android:id="@+id/secondary_share_test_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <include layout="@layout/card_share_test_result_secondary"
          android:id="@+id/secondary_share_test_result_card" />

      </LinearLayout>

      <!-- "Share this app" card -->
      <LinearLayout
        android:id="@+id/share_app_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <include layout="@layout/card_share_this_app" />

      </LinearLayout>

      <!-- "See previously shared test results even after EN turndown" card -->
      <LinearLayout
        android:id="@+id/see_test_results_in_turndown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <include layout="@layout/card_see_test_results_in_turndown"
          android:id="@+id/see_test_results_in_turndown_card" />

      </LinearLayout>

      <!-- PHA message that may be displayed in case of the PHA-turndown -->
      <TextView
        android:id="@+id/health_authority_turndown_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginVertical="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_medium"
        android:autoLink="web"
        android:text="@string/turndown_agency_message"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorControlNormal"
        android:visibility="gone"/>

      <TextView
        android:id="@+id/check_exposure_status_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginVertical="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_normal"
        android:text="@string/check_exposure_status"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:visibility="gone" />

      <ViewFlipper
        android:id="@+id/check_exposure_status_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <!-- Secondary "No recent exposure" card -->
        <include
          layout="@layout/card_no_recent_exposure_secondary_layout"
          android:id="@+id/no_recent_exposure_secondary_layout" />

        <!-- Secondary "Possible exposure" card -->
        <include
          layout="@layout/card_possible_exposure_secondary_layout"
          android:id="@+id/possible_exposure_secondary_layout" />

      </ViewFlipper>

      <TextView
        android:id="@+id/have_questions_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginVertical="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_normal"
        android:text="@string/have_questions"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:visibility="gone" />

      <!-- "Learn how EN works" card -->
      <LinearLayout
        android:id="@+id/learn_how_en_works"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <include
          layout="@layout/card_learn_how_en_works"
          android:id="@+id/learn_how_en_works_layout" />

      </LinearLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>